# yoloFaceCplus

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  yoloface.cpp  yoloface.h
